[workspace]
resolver = "2"
members = [
    "aeth",
    "aeth-event",
    "aeth-task",
    "aeth-window",
    "aeth-window/macros",
    "aeth-entry",
    "aeth-entry/macros",

    "examples",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/aegistudio/aeth-rs"
authors = ["aegistudio (www@aegistudio.net)"]
version = "0.0.4"

[workspace.dependencies]
# Submodule Cross-Referencing
aeth = { version = "=0.0.4", path = "aeth" }
aeth-event = { version = "=0.0.4", path = "aeth-event" }
aeth-task = { version = "=0.0.4", path = "aeth-task" }
aeth-window = { version = "=0.0.4", path = "aeth-window" }
aeth-entry = { version = "=0.0.4", path = "aeth-entry" }

# Utility Libraries
indexed-bitmap = { version = "1.0.0" }
anyhow = { version = "1.0.100" }
rand = { version = "0.9.2" }

# Async Frameworks
futures = { version = "0.3.31" }
tokio = { version = "1.48.0", features = ["full"] }
core_affinity = { version = "0.8.3" }
thread-priority = { version = "3.0.0" }

# Display + Graphics
winit = { version = "0.31.0-beta.2" }

# Procedural Macros
proc-macro2 = { version = "1.0.60" }
proc-macro-crate = { version = "3.4.0" }
quote = { version = "1.0" }
syn = { version = "2.0.52", features = ["full"] }
