[package]
name = "aeth-entry"
description = "Intended entrypoint for aeth-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aeth-task.workspace = true
aeth-window.workspace = true
aeth-entry-macros.workspace = true
anyhow.workspace = true

[dev-dependencies]