[package]
name = "aeth-event"
description = "Async based event primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
futures.workspace = true
indexed-bitmap.workspace = true

[dev-dependencies]
anyhow.workspace = true