[package]
name = "aeth-task"
version = "0.0.1"
edition = "2024"
authors = ["aegistudio (www@aegistudio.net)"]
license = "MIT"
homepage = "https://github.com/aegistudio/aeth-rs"
description = "Tasking system for aeth-rs"

[dependencies]
futures = { version = "0.3.31" }
anyhow = { version = "1.0.100" }
tokio = { version = "1.48.0", features = ["full"] }
core_affinity = { version = "0.8.3" }
thread-priority = { version = "3.0.0" }
rand = { version = "0.9.2" }

[dev-dependencies]