[package]
name = "aeth-task"
description = "Tasking system for aeth-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
futures.workspace = true
anyhow.workspace = true
tokio.workspace = true
core_affinity.workspace = true
thread-priority.workspace = true
rand.workspace = true

[dev-dependencies]