[package]
name = "aeth-window"
description = "The window subsystem for aeth-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
winit.workspace = true
aeth-event.workspace = true
aeth-task.workspace = true
aeth-window-macros = { path = "./macros" }
indexed-bitmap.workspace = true
futures.workspace = true

[dev-dependencies]