[package]
name = "aeth"
description = "Rust library for building UI applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aeth-event.workspace = true
aeth-task.workspace = true
aeth-window.workspace = true
aeth-entry.workspace = true

[dev-dependencies]