[package]
name = "aeth-entry-macros"
description = "The procedural macros for aeth-entry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
proc-macro2.workspace = true
proc-macro-crate.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]